[gd_scene load_steps=15 format=3 uid="uid://fl58kaw0448p"]

[ext_resource type="Script" uid="uid://ckgf8ca2jhbtq" path="res://Main/HUD/player_screen/player_screen.gd" id="1_lx07c"]
[ext_resource type="Shader" uid="uid://nwemup55v2oo" path="res://Shaders/Dither.gdshader" id="1_vmtli"]
[ext_resource type="PackedScene" uid="uid://cj0lgh51c800b" path="res://Main/CarNode/carNode.tscn" id="2_bfx3i"]
[ext_resource type="PackedScene" uid="uid://fgsyilf2lqgu" path="res://Main/RaceCamera/race_camera.tscn" id="4_3kx3p"]
[ext_resource type="PackedScene" uid="uid://dfsx8v4xhh8bu" path="res://Main/HUD/player_screen/drift_display/drift_display.tscn" id="5_l8bwb"]
[ext_resource type="PackedScene" uid="uid://ctoy0xwb5dm8i" path="res://Main/HUD/player_screen/player_screen_buttons/hotkey_button_base.tscn" id="7_bngm3"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="8_h48us"]
[ext_resource type="Script" uid="uid://cvy3fbqlimbjk" path="res://Main/HUD/player_screen/player_screen_buttons/input_button.gd" id="9_cbif6"]
[ext_resource type="Texture2D" uid="uid://dvi73xvjgd7cf" path="res://Assets/HUD/Buttons/brake_button.png" id="10_1f3pk"]
[ext_resource type="Texture2D" uid="uid://wactsjbapgjx" path="res://Assets/HUD/Buttons/brake_button_pressed.png" id="11_cbaa7"]
[ext_resource type="Texture2D" uid="uid://bluedm0cd0ueo" path="res://Assets/HUD/Buttons/accelerate_button.png" id="12_1h4r7"]
[ext_resource type="Texture2D" uid="uid://ct4ico63lyxof" path="res://Assets/HUD/Icons/Tilt/phone_tilt_3.png" id="13_qdy7p"]
[ext_resource type="Texture2D" uid="uid://dbkgfot0f6tnm" path="res://Assets/HUD/Buttons/accelerate_button_pressed.png" id="13_yxn00"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_73skw"]
shader = ExtResource("1_vmtli")
shader_parameter/colors = 8.0
shader_parameter/dither = 0.1

[node name="playerScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lx07c")
target_player = NodePath("SubViewportContainer/SubViewport/CarNode")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_73skw")
layout_mode = 2
mouse_filter = 2
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="Camera3D" parent="SubViewportContainer/SubViewport" node_paths=PackedStringArray("follow_target") instance=ExtResource("4_3kx3p")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.25, -4.3)
follow_target = NodePath("../CarNode/carMesh")

[node name="CarNode" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_bfx3i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)

[node name="hudElements" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 16

[node name="MilesControl" type="Control" parent="hudElements"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MilesContainer" type="HBoxContainer" parent="hudElements/MilesControl"]
layout_mode = 0
offset_left = -394.0
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(394, 0)
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2

[node name="MPHLabel" type="Label" parent="hudElements/MilesControl/MilesContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.631035, 0.631035, 0.631035, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 24
text = "mph"

[node name="SpeedLabel" type="Label" parent="hudElements/MilesControl/MilesContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 32
theme_override_constants/shadow_outline_size = 32
theme_override_font_sizes/font_size = 98
text = "0"

[node name="driftHUDControl" parent="hudElements" instance=ExtResource("5_l8bwb")]
layout_mode = 2
target_player = NodePath("../../SubViewportContainer/SubViewport/CarNode")

[node name="lvlLabel" parent="hudElements/driftHUDControl/MarginContainer/driftProgressBar/Control" index="1"]
visible = false

[node name="Control" type="Control" parent="hudElements"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="driftTimerNode" type="Control" parent="hudElements/Control"]
layout_mode = 2
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="touchScreenButtonsCanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="buttonsContainer" type="MarginContainer" parent="touchScreenButtonsCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="accelerateButtonControl" type="MarginContainer" parent="touchScreenButtonsCanvasLayer/buttonsContainer"]
custom_minimum_size = Vector2(320, 360)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("9_cbif6")
input_action = "accelerate_1"

[node name="TextureButton" type="TextureButton" parent="touchScreenButtonsCanvasLayer/buttonsContainer/accelerateButtonControl"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
toggle_mode = true
texture_normal = ExtResource("12_1h4r7")
texture_pressed = ExtResource("13_yxn00")
stretch_mode = 3

[node name="brakeButtonControl" type="MarginContainer" parent="touchScreenButtonsCanvasLayer/buttonsContainer"]
custom_minimum_size = Vector2(320, 360)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("9_cbif6")
input_action = "brake_1"

[node name="TextureButton" type="TextureButton" parent="touchScreenButtonsCanvasLayer/buttonsContainer/brakeButtonControl"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
toggle_mode = true
texture_normal = ExtResource("10_1f3pk")
texture_pressed = ExtResource("11_cbaa7")
stretch_mode = 3

[node name="joystickCanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="MarginContainer" type="MarginContainer" parent="joystickCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="joystickControl" type="MarginContainer" parent="joystickCanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Virtual Joystick" parent="joystickCanvasLayer/MarginContainer/joystickControl" instance=ExtResource("8_h48us")]
layout_mode = 2

[node name="hotkeysCanvasLayer" type="CanvasLayer" parent="."]

[node name="buttonsContainer" type="MarginContainer" parent="hotkeysCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 8

[node name="AutoAccelerateHotkeyButton" parent="hotkeysCanvasLayer/buttonsContainer" instance=ExtResource("7_bngm3")]
layout_mode = 2
margin_animation_offset = Vector2(-155, 0)
input_action = "auto_acceleration_1"

[node name="automaticDrivingMargin" parent="hotkeysCanvasLayer/buttonsContainer/AutoAccelerateHotkeyButton/Control" index="0"]
offset_bottom = 51.0

[node name="label" parent="hotkeysCanvasLayer/buttonsContainer/AutoAccelerateHotkeyButton/Control/automaticDrivingMargin" index="0"]
text = "[center]Aceleracion automatica"

[node name="GyroHotkeyButton" parent="hotkeysCanvasLayer/buttonsContainer" instance=ExtResource("7_bngm3")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
margin_animation_offset = Vector2(0, -120)
custom_label_default_position = Vector2(0, 20)
input_action = "toggle_gyro"
global_variable_reference = "driving_gyro_enabled"

[node name="automaticDrivingMargin" parent="hotkeysCanvasLayer/buttonsContainer/GyroHotkeyButton/Control" index="0"]
offset_left = -38.0
offset_top = 80.0
offset_right = 90.0
offset_bottom = 120.0

[node name="label" parent="hotkeysCanvasLayer/buttonsContainer/GyroHotkeyButton/Control/automaticDrivingMargin" index="0"]
text = "[center]Gyro"

[node name="TextureButton" parent="hotkeysCanvasLayer/buttonsContainer/GyroHotkeyButton" index="1"]
visible = false

[node name="TextureRect" type="TextureRect" parent="hotkeysCanvasLayer/buttonsContainer/GyroHotkeyButton"]
layout_mode = 2
texture = ExtResource("13_qdy7p")

[connection signal="gyro_movement_toggled" from="SubViewportContainer/SubViewport/CarNode" to="." method="_on_car_node_gyro_movement_toggled"]
[connection signal="gui_input" from="touchScreenButtonsCanvasLayer/buttonsContainer/accelerateButtonControl" to="touchScreenButtonsCanvasLayer/buttonsContainer/accelerateButtonControl" method="_on_gui_input"]
[connection signal="gui_input" from="touchScreenButtonsCanvasLayer/buttonsContainer/brakeButtonControl" to="touchScreenButtonsCanvasLayer/buttonsContainer/brakeButtonControl" method="_on_gui_input"]

[editable path="hudElements/driftHUDControl"]
[editable path="hotkeysCanvasLayer/buttonsContainer/AutoAccelerateHotkeyButton"]
[editable path="hotkeysCanvasLayer/buttonsContainer/GyroHotkeyButton"]
